feat: support user management and refine openapi
