# aperag/api/openapi.yaml
@@ -11,11 +11,36 @@ components:
     BearerAuth:
       type: http
       scheme: bearer
+    ApiKeyAuth:
+      type: apiKey
+      in: header
+      name: Authorization
+    CookieAuth:
+      type: apiKey
+      in: cookie
+      name: sessionid
 paths:
+  # bots
   /bots:
     $ref: './paths/bots.yaml#/bots'
   /bots/{bot_id}:
     $ref: './paths/bots.yaml#/bot'
+
+  # chats
+  /bots/{bot_id}/chats:
+    $ref: './paths/chats.yaml#/chats'
+  /bots/{bot_id}/chats/{chat_id}:
+    $ref: './paths/chats.yaml#/chat'
+  /bots/{bot_id}/chats/{chat_id}/messages/{message_id}:
+    $ref: './paths/message.yaml#/message'
+  /bots/{bot_id}/web-chats:
+    $ref: './paths/chats.yaml#/web_chats'
+  /bots/{bot_id}/web-chats/{chat_id}:
+    $ref: './paths/chats.yaml#/web_chat'
+  /bots/{bot_id}/web-chats/{chat_id}/messages/{message_id}:
+    $ref: './paths/message.yaml#/message'
+
+  # collections
   /collections:
     $ref: './paths/collections.yaml#/collections'
   /collections/{collection_id}:
@@ -28,25 +53,39 @@ paths:
     $ref: './paths/collections.yaml#/questions'
   /collections/{collection_id}/questions/{question_id}:
     $ref: './paths/collections.yaml#/question'
-  /bots/{bot_id}/chats:
-    $ref: './paths/chats.yaml#/chats'
-  /bots/{bot_id}/chats/{chat_id}:
-    $ref: './paths/chats.yaml#/chat'
-  /bots/{bot_id}/web-chats:
-    $ref: './paths/chats.yaml#/web_chats'
-  /bots/{bot_id}/web-chats/{chat_id}:
-    $ref: './paths/chats.yaml#/web_chat'
-  /bots/{bot_id}/web-chats/{chat_id}/messages/{message_id}:
-    $ref: './paths/message.yaml#/message'
+
+  # apikeys
   /apikeys:
     $ref: './paths/apikeys.yaml#/apikeys'
   /apikeys/{apikey_id}:
     $ref: './paths/apikeys.yaml#/apikey'
-  /user_info:
-    $ref: './paths/user_info.yaml#/user_info'
+
+  # models
   /models:
     $ref: './paths/models.yaml#/models'
+
+  # config
   /config:
     $ref: './paths/config.yaml#/config'
-  /prompt_templates:
-    $ref: './paths/prompt_templates.yaml#/prompt_templates'
+  /prompt-templates:
+    $ref: './paths/prompt_templates.yaml#/promptTemplates'
+
+  # users
+  /invite:
+    $ref: './paths/auth.yaml#/invite'
+  /invitations:
+    $ref: './paths/auth.yaml#/invitations'
+  /register:
+    $ref: './paths/auth.yaml#/register'
+  /login:
+    $ref: './paths/auth.yaml#/login'
+  /logout:
+    $ref: './paths/auth.yaml#/logout'
+  /users:
+    $ref: './paths/auth.yaml#/users'
+  /user:
+    $ref: './paths/auth.yaml#/user'
+  /change-password:
+    $ref: './paths/auth.yaml#/changePassword'
+  /users/{user_id}:
+    $ref: './paths/auth.yaml#/deleteUser'
